graphics and buttons
added in some graphics and buttons

--- a/PedometerApplication/res/values/strings.xml
+++ b/PedometerApplication/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">PedometerApplication</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="Refresh">Refresh</string>
+    <string name="Pause">Pause</string>
+    <string name="resume">Resume</string>
 
 </resources>
