--- a/PedometerApplication/res/values/strings.xml
+++ b/PedometerApplication/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">PedometerApplication</string>
     <string name="action_settings">Settings</string>
-    <string name="Refresh">Reset and Calibrate</string>
+    <string name="Refresh">Reset/Calibrate</string>
     <string name="Pause">Pause</string>
     <string name="resume">Resume</string>
 
